# skif

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  uml.txt
core/: CMakeLists.txt  DomainException.h  EngineManager.cpp  EngineManager.h  GameDescription.h  IGameManager.h  IGameOutput.h  INetworkDownloadManager.h  IRepositoryProvider.h  ITextGameEngine.h  IUserCommand.h  SettingsElement.h  TextGameEngine.cpp  TextGameEngine.h
doc/archi/: architect.md  convert.bat  level1.puml  level2.puml
doc/archi/proc/: C4_Component.iuml  C4_Container.iuml  C4_Context.iuml  core.cmapx  core.puml  level1.cmapx  level2.cmapx  level3.cmapx  level3.puml  main.cmapx  main.puml  providers.cmapx  providers.puml
frontend/: CMakeLists.txt
frontend/cli/: CMakeLists.txt  main.cpp
lang/ru/: skif-gui.mo  skif-gui.po
scripts/: compile_by_cmake.cmd  poCreate.bat
src/: CMakeLists.txt
src/core/: CMakeLists.txt  DomainException.h  EngineManager.h  GLogger.cpp  GameDescription.h  IConfigParser.h  ILocalFileStorage.h  INetworkDownloadManager.h  IOSLayer.h  ITolk.h  IUserOutputNotifier.h  RepositoryProvider.cpp  RepositoryProvider.h  TextGameEngine.cpp  TextGameEngine.h
src/frontend/: CMakeLists.txt
src/frontend/cli/: CMakeLists.txt  main.cpp
src/frontend/gui/: CMakeLists.txt  GLogger.cpp  GLogger.h  centralpanel.cpp  centralpanel.h  logframe.cpp  logframe.h  main.cpp  mainframe.cpp  mainframe.h  parserlineinput.cpp  parserlineinput.h  settingsdialog.cpp  settingsdialog.h
src/sound/: CMakeLists.txt
src/sound/bass/: BassSoundPlayer.cpp  BassSoundPlayer.h  CMakeLists.txt
src/sound/tolk_dll/: CMakeLists.txt  tolk_dll.cpp  tolk_dll.h
src/terps/: CMakeLists.txt
src/terps/echo/: CMakeLists.txt  EchoEngine.cpp  EchoEngine.h
src/terps/tads2/: CMakeLists.txt  Tads2Engine.cpp  Tads2Engine.h
src/terps/tads2/os/: inout.c  oem_skif.c  osdosex.c  osskifnui.c  oswin.h
src/terps/tads2/tads2_base/: CMakeLists.txt  fio.c  output.c  resmap.h  tadsrsc.c
src/tests/: fakeit.hpp
terps/: CMakeLists.txt
terps/echo/interface/: EchoEngine.h
terps/tads2/: CMakeLists.txt
terps/tads2/tads2_win/: CMakeLists.txt
tests/: CMakeLists.txt  testEngineManager.cpp  testMain.cpp
tests/CppUnitLite/: TestResult.cpp
